[tool.poetry]
name = "hhm-hack"
version = "0.1.0"
description = ""
authors = ["MaksymPetyak <petyak.mi@gmail.com>"]
readme = "README.md"
packages = [{include = "hhm_hack"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
streamlit = "^1.23.1"
langchain = "^0.0.212"
streamlit-chat = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
